[AWIT-88] First batch of corrections after review
This still needs some work.